--- a/diffr.cabal
+++ b/diffr.cabal
@@ -11,11 +11,19 @@ cabal-Version:  >=1.2
 executable diffr
   hs-source-dirs:  src
   main-is:         Diffr/Main.hs
-  build-Depends:   
+  build-depends:   
                     base >= 4,
-                    cmdargs > 0.10
+                    cmdargs > 0.10,
+                    bytestring >= 0.9.2.1,
+                    array >= 0.4.0.1,
+                    mtl,
+                    parsec >= 3.1.3,
+                    attoparsec >= 0.10.4.0
   ghc-options:     -Wall
-  other-modules:   Diffr.Util
+  other-modules:   
+                   Diffr.Util,
+                   Diffr.Patch,
+                   Diffr.Test
 
 test-suite TestSuite
   type:            exitcode-stdio-1.0
@@ -24,7 +32,9 @@ test-suite TestSuite
   build-depends:   base >= 4, HTF > 0.9
   other-modules:   
                   Diffr.Util,
-                  Diffr.UtilTest
+                  Diffr.UtilTest,
+                  Diffr.Patch,
+                  Diffr.Test
   hs-source-dirs:  
                   test,
                   src
